[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Poppins-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/base.tres" type="Theme" id=2]
[ext_resource path="res://SpaceInvasion/Start.gd" type="Script" id=3]
[ext_resource path="res://SpaceInvasion/assets/Pasted File at August 11, 2021 2_02 PM.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 21
outline_color = Color( 0.184314, 0.109804, 0.109804, 1 )
font_data = ExtResource( 1 )

[node name="Start" type="Node2D"]
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.564706, 0.839216, 1, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect"]
anchor_right = 1.0
margin_top = 30.0
margin_bottom = 4681.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartHeader" type="Label" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 31.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Space invasion"
align = 1
valign = 1

[node name="StartExpl" type="Label" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 209.0
size_flags_vertical = 1
theme = ExtResource( 2 )
text = "The year 2517. A classical battle between humans and aliens had reached its height. Both species want to control the UIX-174 planets.

Though this battle is not about strength, nor is it about speed. It is a real strategic test for humans and aliens.

Your goal is to invade as many planets as you can and have superiority in the UIX-174 system."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -223.5
margin_top = -436.0
margin_right = 223.5
rect_min_size = Vector2( 447, 436 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -75.0
margin_right = 80.0
margin_bottom = -35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="MarginContainer/Control/HBoxContainer"]
margin_top = 4.0
margin_right = 52.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rules" type="Button" parent="MarginContainer/Control/HBoxContainer"]
margin_left = 56.0
margin_top = 4.0
margin_right = 111.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "Rules"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="MarginContainer/Control/HBoxContainer"]
margin_left = 115.0
margin_top = 4.0
margin_right = 160.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/Control/HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MarginContainer/Control/HBoxContainer/Rules" to="." method="_on_Rules_pressed"]
[connection signal="pressed" from="MarginContainer/Control/HBoxContainer/Play" to="." method="_on_Play_pressed"]
